# Trimps.github.io

./: .gitignore  ScreenReader.html  config.js  index.html  indexKong.html  main.js  package-lock.json  package.json  sounds.js  updates.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
